@@ -28,6 +28,7 @@
 package org.opennms.features.topology.plugins.browsers;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import org.opennms.features.topology.api.support.DialogWindow;
@@ -35,18 +36,22 @@ import org.opennms.features.topology.api.support.InfoWindow;
 import org.opennms.features.topology.api.support.InfoWindow.LabelCreator;
 import org.opennms.netmgt.dao.api.AlarmDao;
 import org.opennms.netmgt.model.OnmsAlarm;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 import com.vaadin.data.Property;
+import com.vaadin.server.Page;
+import com.vaadin.server.VaadinServlet;
 import com.vaadin.ui.Button;
+import com.vaadin.ui.Table;
 import com.vaadin.ui.Button.ClickEvent;
 import com.vaadin.ui.Button.ClickListener;
-import com.vaadin.ui.Table;
 import com.vaadin.ui.Table.ColumnGenerator;
 import com.vaadin.ui.themes.BaseTheme;
 
 public class AlarmIdColumnLinkGenerator implements ColumnGenerator {
-
 	private static final long serialVersionUID = 621311104480258016L;
+	private static final Logger LOG = LoggerFactory.getLogger(AlarmIdColumnLinkGenerator.class);
 	private final String alarmIdPropertyName;
 	private final AlarmDao alarmDao;
 	
@@ -61,31 +66,36 @@ public class AlarmIdColumnLinkGenerator implements ColumnGenerator {
 	@Override
 	public Object generateCell(final Table source, Object itemId, Object columnId) {
 		if (source == null) return null; // no source
-		Property alarmIdProperty = source.getContainerProperty(itemId,  alarmIdPropertyName);
-		final Object alarmId = alarmIdProperty.getValue(); 
+		Property<Integer> alarmIdProperty = source.getContainerProperty(itemId,  alarmIdPropertyName);
+		final Integer alarmId = alarmIdProperty.getValue(); 
 		if (alarmId == null) return null; // no value
 
 		// create Link
 		Button button = new Button("" + alarmId);
 		button.setStyleName(BaseTheme.BUTTON_LINK);
-		button.addListener(new ClickListener() {
+		button.addClickListener(new ClickListener() {
             private static final long serialVersionUID = 3698209256202413810L;
 
             @Override
 			public void buttonClick(ClickEvent event) {
 			    // try if alarm is there, otherwise show information dialog
-			    OnmsAlarm alarm = alarmDao.get((Integer) alarmId);
+			    OnmsAlarm alarm = alarmDao.get(alarmId);
 			    if (alarm == null) {
-		           new DialogWindow(source.getWindow(), 
+		           new DialogWindow(source.getUI(), 
 		                         "Alarm does not exist!", 
 		                         "The alarm information cannot be shown. \nThe alarm does not exist anymore. \n\nPlease refresh the Alarm Table.");
 			        return;
 			    }
 			    
 			    // alarm still exists, show alarm details
-				try {
-					source.getWindow().addWindow(
-						new InfoWindow(new URL(source.getWindow().getURL(), "../../alarm/detail.htm?id=" + alarmId), new LabelCreator() {
+		                final URI currentLocation = Page.getCurrent().getLocation();
+		                final String contextRoot = VaadinServlet.getCurrent().getServletContext().getContextPath();
+		                final String redirectFragment = contextRoot + "/alarm/detail.htm?quiet=true&id=" + alarmId;
+		                LOG.debug("alarm {} clicked, current location = {}, uri = {}", alarmId, currentLocation, redirectFragment);
+
+		                try {
+					source.getUI().addWindow(
+						new InfoWindow(new URL(currentLocation.toURL(), redirectFragment), new LabelCreator() {
 								
 							@Override
 							public String getLabel() {
@@ -93,7 +103,7 @@ public class AlarmIdColumnLinkGenerator implements ColumnGenerator {
 							}
 						}));
 				} catch (MalformedURLException e) {
-					e.printStackTrace();
+					LOG.error(e.getMessage(), e);
 				}
 			}
 		});
